<resources>
    <string name="app_name">NotesApp</string>
    <string name="last_edit">Last edit </string>
    <string name="title_add_note">Title</string>
    <string name="description_add_note">Description</string>
    <string name="high_priority">High priority</string>
    <string name="medium_priority">Medium priority</string>
    <string name="low_priority">Low priority</string>
    <string name="last_edit_s">Last edit: %s</string>
    <string-array name="day_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_new_account">Create new Account</string>
    <string name="i_have_an_account">I have an Account</string>
    <string name="register">register</string>
</resources>