<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNote">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/imageCL"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"

        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextTitle"
        app:layout_constraintVertical_bias="0.0">


        <ImageView
            android:id="@+id/im"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:drawable/editbox_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/image" />

        <ImageButton
            android:id="@+id/editButton"
            android:layout_width="36dp"
            android:layout_height="41dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/black"
            android:onClick="editImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_edit_24" />

        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="36dp"
            android:layout_height="41dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/black"
            android:onClick="editImage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_delete_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"


        app:layout_constraintGuide_percent="0.4">

    </androidx.constraintlayout.widget.Guideline>

    <EditText
        android:id="@+id/editTextTitle"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"

        android:layout_marginEnd="8dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/title_add_note"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textAlignment="textStart"

        android:textColor="@color/black"
        android:textColorHighlight="@android:color/black"
        android:textColorHint="@color/black"

        android:textCursorDrawable="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <EditText

        android:id="@+id/editTextTextMultiLine"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/description_add_note"
        android:gravity="left"
        android:inputType="textMultiLine"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/black"
        android:textColorLink="@android:color/transparent"
        android:textCursorDrawable="@color/black"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageCL" />

<LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:entries="@array/day_of_week"
            android:gravity="clip_horizontal|center_horizontal" />

        <RadioGroup

            android:id="@+id/rgPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/white"
                android:checked="true"
                android:gravity="center_horizontal|center_vertical"
                android:minHeight="48dp"
                android:tag="1"
                android:text="@string/high_priority"
                android:textColorHighlight="@color/black"
                android:textColorLink="@color/black" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/white"
                android:gravity="center_horizontal|center_vertical"
                android:minHeight="48dp"
                android:tag="2"
                android:text="@string/medium_priority"
                android:textColorHighlight="@color/black"
                android:textColorLink="@color/black" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/white"
                android:gravity="center_horizontal|center_vertical"
                android:minHeight="48dp"
                android:tag="3"
                android:text="@string/low_priority"
                android:textColorHighlight="@color/black"
                android:textColorLink="@color/black" />
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:id="@+id/save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginEnd="8dp"
        android:layout_marginBottom="2dp"
        android:fontFamily="casual"
        android:onClick="done"
        android:padding="4dp"
        android:text="Done"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextTitle"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/black"
        android:clickable="true"
        android:onClick="editImage"
        app:backgroundTint="@color/black"

        app:fabSize="auto"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"

        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/image" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintGuide_end="105dp"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>